--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style/style.css" type="text/css" />
+    <title>Somos Pescar</title>
     <link rel="icon" href="./img/icono.png" type="image/png" />
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <title>Somos Pescar</title>
+    <link rel="stylesheet" href="style/style.css" type="text/css" />
   </head>
 
   <body>
@@ -44,7 +44,7 @@
               <a href="#">COMO INGRESAR</a>
             </li>
             <li>
-              <a href="#">LA BECA</a>
+              <a href="./pages/LaBeca.html">LA BECA</a>
             </li>
           </ul>
         </nav>
@@ -161,8 +161,6 @@
         <h2>Experiencias</h2>
 
         <div class="experiencias">
-          <!--SCROLL EXPERIENCIAS-->
-
           <div class="experiencia">
             <img src="./img/Default_pfp.jpg" alt="" />
             <div class="texto">
