Customize el cursor de color azul

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style/style.css" type="text/css" />
+    <link rel="stylesheet" href="./style/style.css" type="text/css" />
   </head>
 
   <body>
@@ -53,7 +53,7 @@
       <div id="home">
         <img src="./img/iconoCompleto.png" alt="" />
 
-        <img src="./img/pescador.jpeg" alt="" />
+        <img src="./img/pescador.png" alt="" />
       </div>
 
       <div id="intro">
@@ -242,6 +242,8 @@
         <em>Centro Pescar "Paths to the Future"</em>
       </p>
     </footer>
+
+    <div class="cursor"></div>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./js/main.js"></script>
