Mejore el acordeón y saque Boostrap del HTML

--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -16,12 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+
     <link rel="stylesheet" href="../style/style.css" type="text/css" />
   </head>
 
@@ -56,285 +51,106 @@
         </nav>
       </header>
 
-      <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button
-              class="accordion-button"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseOne"
-              aria-expanded="true"
-              aria-controls="collapseOne"
-            >
-              Accordion Item #1
-            </button>
-          </h2>
-          <div
-            id="collapseOne"
-            class="accordion-collapse collapse show"
-            aria-labelledby="headingOne"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is
-              shown by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingTwo">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseTwo"
-              aria-expanded="false"
-              aria-controls="collapseTwo"
-            >
-              Accordion Item #2
-            </button>
-          </h2>
-          <div
-            id="collapseTwo"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingTwo"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThree">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseThree"
-              aria-expanded="false"
-              aria-controls="collapseThree"
-            >
-              Accordion Item #3
-            </button>
-          </h2>
-          <div
-            id="collapseThree"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingThree"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingFour">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseFour"
-              aria-expanded="false"
-              aria-controls="collapseFour"
-            >
-              Accordion Item #4
-            </button>
-          </h2>
-          <div
-            id="collapseFour"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingFour"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingFive">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseFive"
-              aria-expanded="false"
-              aria-controls="collapseFive"
-            >
-              Accordion Item #5
-            </button>
-          </h2>
-          <div
-            id="collapseFive"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingFive"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingSix">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseSix"
-              aria-expanded="false"
-              aria-controls="collapseSix"
-            >
-              Accordion Item #6
-            </button>
-          </h2>
-          <div
-            id="collapseSix"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingSix"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingSeven">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseSeven"
-              aria-expanded="false"
-              aria-controls="collapseSeven"
-            >
-              Accordion Item #7
-            </button>
-          </h2>
-          <div
-            id="collapseSeven"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingSeven"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingEight">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseEight"
-              aria-expanded="false"
-              aria-controls="collapseEight"
-            >
-              Accordion Item #8
-            </button>
-          </h2>
-          <div
-            id="collapseEight"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingEight"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingNine">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseNine"
-              aria-expanded="false"
-              aria-controls="collapseNine"
-            >
-              Accordion Item #9
-            </button>
-          </h2>
-          <div
-            id="collapseNine"
-            class="accordion-collapse collapse"
-            aria-labelledby="headingNine"
-            data-bs-parent="#accordionExample"
-          >
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is
-              hidden by default, until the collapse plugin adds the appropriate
-              classes that we use to style each element. These classes control
-              the overall appearance, as well as the showing and hiding via CSS
-              transitions. You can modify any of this with custom CSS or
-              overriding our default variables. It's also worth noting that just
-              about any HTML can go within the <code>.accordion-body</code>,
-              though the transition does limit overflow.
-            </div>
-          </div>
+      <div class="container-accordion">
+        <div class="accordion">
+          <dl>
+            <dt>
+              <a class="accordionTitle" href="#"
+                >Test Simple Flat UI CSS Accordion 1</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >Test Simple Flat UI CSS Accordion 2</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >Test Simple Flat UI CSS Accordion 3</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >Test Simple Flat UI CSS Accordion 4</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >Test Simple Flat UI CSS Accordion 5</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >Test Simple Flat UI CSS Accordion 6</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+          </dl>
         </div>
       </div>
     </main>
@@ -346,12 +162,10 @@
       </p>
     </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <div class="cursor"></div>
+
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="../js/LaBeca.js"></script>
     <script src="../js/main.js"></script>
   </body>
 </html>
