Hice mejoras en el responsive 400px

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       </header>
 
       <div id="home">
-        <img src="./img/iconoCompleto.png" alt="" />
+        <img class="home-icono" src="./img/iconoCompleto.png" alt="" />
 
-        <img src="./img/pescador.png" alt="" />
+        <img class="home-pescador" src="./img/pescador.png" alt="" />
       </div>
 
       <div id="intro">
@@ -138,7 +138,7 @@
       </section>
 
       <div class="companias-asociadas">
-        <h2 id="titulo-companias"><i>Companias asociadas</i></h2>
+        <h2 id="titulo-companias"><i>Compañías asociadas</i></h2>
         <img src="./img/empresas.png" alt="" />
       </div>
 
@@ -147,8 +147,8 @@
           <figure>
             <img src="./img/fotosDelGrupo/foto-grupal1.jpg" alt="" />
             <img src="./img/fotosDelGrupo/foto-grupal2.jpg" alt="" />
-            <img src="./img/fotosDelGrupo/foto-grupal3.jpg" alt="" />
-            <img src="./img/fotosDelGrupo/foto-grupal4.jpeg" alt="" />
+            <img src="./img/fotosDelGrupo/foto-grupal3.jpeg" alt="" />
+            <img src="./img/fotosDelGrupo/foto-grupal4.jpg" alt="" />
             <img src="./img/fotosDelGrupo/foto-grupal5.jpeg" alt="" />
           </figure>
         </div>
