Agregue img del pescador mobile

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <img class="home-icono" src="./img/iconoCompleto.png" alt="" />
 
         <img class="home-pescador" src="./img/pescador.png" alt="" />
+
+        <img class="home-pescador-mobile" src="./img/mobile/pescador-mobile.png" alt="" />
       </div>
 
       <div id="intro">
