--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -51,6 +51,11 @@
         </nav>
       </header>
 
+      <div id="home-LaBeca">
+        <img class="img-roadmap" src="../img/roadmap-brainstrom.png" alt="" />
+        <img class="img-roadmap-mobile" src="../img/mobile/celu-view.png" alt="" />
+      </div>
+
       <div class="container-accordion">
         <div class="accordion">
           <dl>
