Indente el código

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 
         <img class="home-pescador" src="./img/pescador.png" alt="" />
 
-        <img class="home-pescador-mobile" src="./img/mobile/pescador-mobile.png" alt="" />
+        <img
+          class="home-pescador-mobile"
+          src="./img/mobile/pescador-mobile.png"
+          alt=""
+        />
       </div>
 
       <div id="intro">
