Indente el código

--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -53,7 +53,11 @@
 
       <div id="home-LaBeca">
         <img class="img-roadmap" src="../img/roadmap-brainstrom.png" alt="" />
-        <img class="img-roadmap-mobile" src="../img/mobile/celu-view.png" alt="" />
+        <img
+          class="img-roadmap-mobile"
+          src="../img/mobile/celu-view.png"
+          alt=""
+        />
       </div>
 
       <div class="container-accordion">
