Agregué una imagen del grupo al carrusel

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <img src="./img/fotosDelGrupo/foto-grupal3.jpeg" alt="" />
             <img src="./img/fotosDelGrupo/foto-grupal4.jpg" alt="" />
             <img src="./img/fotosDelGrupo/foto-grupal5.jpeg" alt="" />
+            <img src="./img/fotosDelGrupo/foto-grupal6.jpg" alt="" />
           </figure>
         </div>
       </div>
