Mejoré la navegación entre las páginas

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
           <ul class="nav-menu">
             <li>
-              <a href="#">HOME</a>
+              <a href="./index.html">HOME</a>
             </li>
             <li>
-              <a href="#">NUESTRO GRUPO</a>
+              <a href="./pages/NuestroGrupo.html">NUESTRO GRUPO</a>
             </li>
             <li>
-              <a href="#">COMO INGRESAR</a>
+              <a href="./pages/ComoIngresar.html">COMO INGRESAR</a>
             </li>
             <li>
               <a href="./pages/LaBeca.html">LA BECA</a>
