--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -39,13 +39,13 @@
               <a href="../index.html">HOME</a>
             </li>
             <li>
-              <a href="#">NUESTRO GRUPO</a>
+              <a href="../pages/NuestroGrupo.html">NUESTRO GRUPO</a>
             </li>
             <li>
-              <a href="#">COMO INGRESAR</a>
+              <a href="../pages/ComoIngresar.html">COMO INGRESAR</a>
             </li>
             <li>
-              <a href="#">LA BECA</a>
+              <a href="../pages/LaBeca.html">LA BECA</a>
             </li>
           </ul>
         </nav>
