Agregué las cards con las experiencias

--- a/index.html
+++ b/index.html
@@ -164,36 +164,206 @@
       <br /><br />
 
       <section>
-        <h2>Experiencias</h2>
-
-        <div class="experiencias">
-          <div class="experiencia">
-            <img src="./img/Default_pfp.jpg" alt="" />
-            <div class="texto">
-              <h3>Nombre</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                hic fuga saepe esse pariatur atque nam autem delectus, rerum
-                perferendis. Ullam iure vel, doloremque sit cum dolores iste
-                debitis et?
-              </p>
-              <a>leer mas</a>
-            </div>
-          </div>
-
-          <div class="experiencia">
-            <img src="./img/Default_pfp.jpg" alt="" />
-            <div class="texto">
-              <h3>Nombre</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                hic fuga saepe esse pariatur atque nam autem delectus, rerum
-                perferendis. Ullam iure vel, doloremque sit cum dolores iste
-                debitis et?
-              </p>
-              <a>leer mas</a>
-            </div>
-          </div>
+        <div class="experiencias-container">
+          <h2 id="experiencias">Experiencias Pescar</h2>
+        </div>
+        <div id="container-slider">
+          <a href="javascript: fntExecuteSlide('prev');" class="arrowPrev"
+            ><i class="fas fa-chevron-circle-left"></i
+          ></a>
+          <a href="javascript: fntExecuteSlide('next');" class="arrowNext"
+            ><i class="fas fa-chevron-circle-right"></i
+          ></a>
+          <ul class="listslider">
+            <li><a href="#" class="item-select-slid"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <ul id="slider">
+            <li style="z-index: 0; opacity: 1">
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/nosotros/Bechara-Nayla.jpeg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Nayla Bechara</strong>
+                        <span>@NaylaBechara</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Beatae minus saepe esse natus ullam non optio, obcaecati
+                      ea rem temporibus molestiae possimus vitae eum magni
+                      animi! Et nemo ea facere!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/nosotros/Belen-Jessikowski.jpg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Belen Jessikowski</strong>
+                        <span>@BelenJessikowski</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Doloribus dolore ex illo enim, ullam rerum quasi
+                      accusantium expedita id laboriosam velit excepturi ipsa.
+                      Distinctio ipsa, deleniti officiis quasi asperiores
+                      facere!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/nosotros/Ezequie-Villalba.jpg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Ezequiel Villalba</strong>
+                        <span>@EzequielVillalba</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Blanditiis iste consequatur esse suscipit inventore
+                      laborum magni quaerat, dolorum deserunt nostrum voluptas
+                      nisi facilis, rem eos expedita. Velit nihil voluptatem
+                      corrupti!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/nosotros/Iván-Caravajal.jpg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Iván Caravajal</strong>
+                        <span>@IvánCaravajal</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Quae assumenda, quis esse saepe doloremque fugit dolore
+                      excepturi magnam eveniet obcaecati eaque ad repellat enim
+                      incidunt exercitationem facere quo autem mollitia?
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/nosotros/Benitez-Mauro.jpg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Mauro Benitez</strong>
+                        <span>@MauroBenitez</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/nosotros/Riesco-Geronimo.jpg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Gerónimo Riesco</strong>
+                        <span>@GeronimoRiesco</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Doloribus libero tenetur veniam atque suscipit laborum
+                      omnis doloremque! In perspiciatis dicta voluptas nulla
+                      natus libero reiciendis numquam, officiis totam error
+                      quaerat!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                  <div class="box-top">
+                    <div class="profile">
+                      <div class="profile-img">
+                        <img src="img/Default_pfp.jpg" alt="" />
+                      </div>
+                      <div class="name-user">
+                        <strong>Abraham Treyan</strong>
+                        <span>@AbrahamTreyan</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="client-comment">
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Dolorum modi enim, veniam qui molestias numquam error
+                      quaerat ad deserunt rerum libero veritatis repellendus
+                      cupiditate sint nihil nesciunt omnis id aperiam?
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -253,5 +423,6 @@
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/HomeExperiencias.js"></script>
   </body>
 </html>
