Mejoras en las cards/experiencias

--- a/index.html
+++ b/index.html
@@ -200,10 +200,11 @@
                   </div>
                   <div class="client-comment">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Beatae minus saepe esse natus ullam non optio, obcaecati
-                      ea rem temporibus molestiae possimus vitae eum magni
-                      animi! Et nemo ea facere!
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
                     </p>
                   </div>
                 </div>
@@ -225,11 +226,11 @@
                   </div>
                   <div class="client-comment">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Doloribus dolore ex illo enim, ullam rerum quasi
-                      accusantium expedita id laboriosam velit excepturi ipsa.
-                      Distinctio ipsa, deleniti officiis quasi asperiores
-                      facere!
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
                     </p>
                   </div>
                 </div>
@@ -251,11 +252,11 @@
                   </div>
                   <div class="client-comment">
                     <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Blanditiis iste consequatur esse suscipit inventore
-                      laborum magni quaerat, dolorum deserunt nostrum voluptas
-                      nisi facilis, rem eos expedita. Velit nihil voluptatem
-                      corrupti!
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
                     </p>
                   </div>
                 </div>
@@ -277,10 +278,11 @@
                   </div>
                   <div class="client-comment">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Quae assumenda, quis esse saepe doloremque fugit dolore
-                      excepturi magnam eveniet obcaecati eaque ad repellat enim
-                      incidunt exercitationem facere quo autem mollitia?
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
                     </p>
                   </div>
                 </div>
@@ -328,11 +330,11 @@
                   </div>
                   <div class="client-comment">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Doloribus libero tenetur veniam atque suscipit laborum
-                      omnis doloremque! In perspiciatis dicta voluptas nulla
-                      natus libero reiciendis numquam, officiis totam error
-                      quaerat!
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
                     </p>
                   </div>
                 </div>
@@ -354,10 +356,11 @@
                   </div>
                   <div class="client-comment">
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Dolorum modi enim, veniam qui molestias numquam error
-                      quaerat ad deserunt rerum libero veritatis repellendus
-                      cupiditate sint nihil nesciunt omnis id aperiam?
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                      Assumenda, velit non. Earum magnam ratione porro
+                      consequatur. Perferendis eveniet voluptates laboriosam
+                      libero rem facilis expedita? Debitis accusamus quidem
+                      exercitationem officiis perspiciatis!
                     </p>
                   </div>
                 </div>
