--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -65,7 +65,7 @@
           <dl>
             <dt>
               <a class="accordionTitle" href="#"
-                >Test Simple Flat UI CSS Accordion 1</a
+                >¿A través de qué medios me puedo informar sobre las convocatorias a inscripciones?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -81,7 +81,7 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >Test Simple Flat UI CSS Accordion 2</a
+                >¿Se necesitan conocimientos técnicos previos?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -97,7 +97,7 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >Test Simple Flat UI CSS Accordion 3</a
+                >¿Cómo es el proceso de selección?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -113,7 +113,7 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >Test Simple Flat UI CSS Accordion 4</a
+                >¿Cómo es el proceso de evaluación que se lleva a cabo durante esta formación?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -129,7 +129,7 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >Test Simple Flat UI CSS Accordion 5</a
+                >¿Cuáles son las principales herramientas de trabajo que se les enseñan a los alumnos?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -145,7 +145,55 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >Test Simple Flat UI CSS Accordion 6</a
+                >¿Cúal es la carga horaria total y semanal correspondiente a la cursada?</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >¿Cuál es el promedio de cupos que tienen las capacitaciones?</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >¿Es seguro que voy a conseguir trabajo durante la cursada o una vez finalizada la misma?</a
+              >
+            </dt>
+            <dd class="accordionItem accordionItemCollapsed">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                eu interdum diam. Donec interdum porttitor risus non bibendum.
+                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
+                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
+                dignissim arcu nec elit faucibus condimentum. Donec facilisis
+                consectetur enim sit amet varius. Pellentesque justo dui,
+                sodales quis luctus a, iaculis eget mauris.
+              </p>
+            </dd>
+            <dt>
+              <a href="#" class="accordionTitle"
+                >¿Qué ocurre luego de finalizar la beca?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
